# Polestar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELEPMENT.md  License  README.md  key  rustfmt.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: handler.rs  main.rs
cli/src/cli/: channel.rs  msg.rs
config/: bot.json
core/: Cargo.toml
core/src/: chat_data.rs  db.rs  error.rs  lib.rs  model.rs  service.rs  utils.rs
core/src/db/: executor.rs  pool.rs  tests.rs
core/src/db/executor/: attachment.rs  channel.rs  msg.rs
core/src/db/migrations/: 20231012002835_init.sql
core/src/db/tests/: common.rs  executor.rs  pool.rs
core/src/model/: app_data.rs  app_store.rs  attachment.rs  bot.rs  channel.rs  feedback.rs  msg.rs  user.rs
core/src/service/: open_ai.rs  req.rs  service_provider.rs
core/src/utils/: config.rs  fs.rs  helper.rs  local_state.rs  token.rs
docs/: get_started.md
docs/development/: bot_config.md  package.md  source_development.md  user_module.md
docs/production/: best_practice.md  cli.md  index.md
gui/: Cargo.toml  bots.json  bots.yml  channels_mock.json  ui.json
gui/src/: component.rs  hotkey.rs  main.rs  oauth.rs  platform.rs  req.rs  style.rs  theme.rs  ui.rs  widgets.rs  window.rs
gui/src/component/: app.rs  channel.rs  chat.rs  common.rs  home.rs  login.rs  permission.rs  quick_launcher.rs  router.rs  setting.rs  sidebar.rs
gui/src/component/chat/: chat_list.rs  editor.rs
gui/src/component/common/: avatar.rs  bot_list.rs  carousel.rs  double_column.rs  icon_button.rs  interact_lists.rs  interactive_lists.rs  modal.rs  router.rs  tooltip.rs
gui/src/component/home/: bot_store.rs  chat.rs  settings.rs  sidebar.rs
gui/src/component/home/chat/: editor.rs  msg_list.rs
gui/src/component/home/settings/: account.rs  general.rs  network.rs
gui/src/component/home/sidebar/: channel_thumbnail_list.rs
gui/src/oauth/: apple.rs  google.rs  microsoft.rs
gui/src/platform/: linux.rs  macos.rs  windows.rs
gui/src/style/: color.rs  decorator.rs  size.rs
gui/src/ui/: app.rs  router.rs
gui/src/widgets/: app.rs  common.rs  helper.rs  home.rs  login.rs  modify_channel.rs  permission.rs  quick_launcher.rs
gui/src/widgets/common/: avatar.rs  bot_list.rs  carousel.rs  double_column.rs  icon_button.rs  interactive_lists.rs  progress_bar.rs  router.rs  tooltip.rs
gui/src/widgets/home/: bot_store.rs  chat.rs  settings.rs  sidebar.rs
gui/src/widgets/home/chat/: editor.rs  msg_list.rs  onboarding.rs
gui/src/widgets/home/settings/: account.rs  general.rs  network.rs
gui/src/widgets/home/sidebar/: channel_thumbnail_list.rs
src/: cli.rs  db.rs  main.rs  model.rs
src/cli/: channel.rs  msg.rs
src/db/: error.rs  executor.rs  pool.rs
src/db/executor/: channel.rs  msg.rs
src/db/migrations/: 20231012002835_init.sql
src/db/tests/: common.rs  executor.rs  pool.rs
src/model/: app_store.rs  bot.rs  channel.rs  msg.rs
src/service/: req.rs
src/utils/: fs.rs
website/: README.md  docusaurus.config.js  package-lock.json  package.json
website/i18n/zh-CN/docusaurus-plugin-content-docs/current/: get_started.md
website/i18n/zh-CN/docusaurus-plugin-content-docs/current/development/: bot_config.md  index.md  package.md  source_development.md  user_module.md
website/i18n/zh-CN/docusaurus-plugin-content-docs/current/production/: best_practice.md  cli.md  index.md  intro.md
website/i18n/zh-Hans/docusaurus-plugin-content-docs/current/development/: index.md
