[package]
name = "polestar-chat"
version = "0.1.0"
edition = "2021"
description = "An AI Q&A chat util written using Ribir, what is a framework written by Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
derive_builder = "0.12.0"

[dependencies.uuid]
version = "1.3.3"
features = [
  "v4",       # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "serde",
]
