[workspace]
members = ["core", "cli", "gui"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
description = "An AI Q&A chat util written using Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
uuid = { version = "1.3.3", features = ["v4", "serde", "fast-rng"] }
env_logger = "0.10.0"
