[package]
name = "polestar-cli"
version.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polestar-core = { path = "../core" }

reqwest.workspace = true
uuid.workspace = true
tokio.workspace = true

reedline-repl-rs = { version = "1.0.7", features = ["async"] }
inquire = "0.6.2"
