[package]
name = "polestar-cli"
version.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polestar-core = { path = "../core" }
tokio.workspace = true
reedline-repl-rs = { version = "1.0.7", features = ["async"] }
inquire = "0.6.2"

[dependencies.uuid]
version = "1.3.3"
features = [
  "v4",       # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "serde",
]
