[package]
name = "polestar-core"
version.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
sqlx = { version = "0.7.2", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
  "uuid",
  "json",
] }
home = { version = "0.5.5" }
thiserror = "1.0.49"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-eventsource = "0.5.0"
futures-util = "0.3.28"
uuid = { version = "1.3.3", features = ["v4", "serde", "fast-rng"] }
# derive_builder = "0.12.0"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"

[dev-dependencies]
testing_logger = "0.1.1"
