[package]
name = "polestar-core"
version.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
reqwest.workspace = true
tokio.workspace = true
env_logger.workspace = true
uuid.workspace = true

sqlx = { version = "0.7.2", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
  "uuid",
  "json",
] }
home = { version = "0.5.5" }
thiserror = "1.0.49"
reqwest-eventsource = "0.5.0"
futures-util = "0.3.28"

[dev-dependencies]
testing_logger = "0.1.1"
