[package]
name = "polestar-core"
version.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
home = { version = "0.5.5" }
thiserror = "1.0.49"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-eventsource.workspace = true
futures-util = "0.3.28"
uuid = { version = "1.3.3", features = ["v4", "serde", "fast-rng"] }
derive_builder = "0.12.0"
env_logger = "0.10.0"
regex = "1.8.3"
aes-gcm = "0.10.2"
rand = "0.8.5"
sqlx.workspace = true
tokio.workspace = true
once_cell.workspace = true
chrono.workspace = true

[dev-dependencies]
testing_logger = "0.1.1"

[features]
persistence = []
