[package]
name = "polestar-gui"
version.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polestar-core = { path = "../core", features = [] }
ribir = { path = "../../Ribir/ribir", features = ["png"] }
ribir_algo = { path = "../../Ribir/algo" }

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

ahash = "0.8.3"
once_cell = "1.18.0"
bitflags = "2.4.0"
tiny_http = "0.12"
url = "2.4.1"
base64 = "0.21.5"
url-escape = "0.1.1"

[target."cfg(target_os = \"macos\")".dependencies]
icrate = { version = "0.0.4", features = [
  "AppKit",
  "AppKit_NSEvent",
  "AppKit_NSWindow",
  "AppKit_NSBox",
  "AppKit_NSColor",
  "AppKit_NSView",
  "AppKit_NSButton",
] }
macos-accessibility-client = { version = "0.0.1" }
