[package]
name = "polestar-gui"
version.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polestar-core = { path = "../core", features = ["persistence"] }
ribir = { git = "https://github.com/RibirX/Ribir", features = ["png", "tokio-async"] }
ribir_algo = { git = "https://github.com/RibirX/Ribir" }

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
once_cell.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

ahash = "0.8.3"
tiny_http = "0.12"
url = "2.4.1"
base64 = "0.21.5"
url-escape = "0.1.1"
rand = "0.8.5"
fs4 = "0.7.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["namedpipeapi"] }
bytes = "1.4.0"
clap = "4.3.19"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target."cfg(target_os = \"macos\")".dependencies]
icrate = { version = "0.0.4", features = [
  "AppKit",
  "AppKit_NSWindow",
  "AppKit_NSButton",
] }
macos-accessibility-client = { version = "0.0.1" }
